Changing over to a multi-machine setup to make it cleaner